--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "@nrwl/angular": "^13.9.5",
     "@nrwl/cli": "13.9.5",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/storybook": "^13.9.5",
     "@nrwl/workspace": "13.9.5",
     "@types/node": "16.11.7",
     "nx": "13.9.5",
