added more apps and libs

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,12 @@
     "baseUrl": ".",
     "paths": {
       "@nativestory/design-system": ["libs/design-system/src/index.ts"],
+      "@nativestory/nativelib-buildable": [
+        "libs/nativelib-buildable/src/index.ts"
+      ],
+      "@nativestory/nativelib-nonbuildable": [
+        "libs/nativelib-nonbuildable/src/index.ts"
+      ],
       "@nativestory/nglib-buildable": ["libs/nglib-buildable/src/index.ts"],
       "@nativestory/nglib-nonbuildable": [
         "libs/nglib-nonbuildable/src/index.ts"
