--- a/apps/ngapp/project.json
+++ b/apps/ngapp/project.json
@@ -16,7 +16,10 @@
         "inlineStyleLanguage": "scss",
         "assets": ["apps/ngapp/src/favicon.ico", "apps/ngapp/src/assets"],
         "styles": ["apps/ngapp/src/styles.scss"],
-        "scripts": []
+        "scripts": [],
+        "stylePreprocessorOptions": {
+          "includePaths": ["libs/design-system/src/lib"]
+        }
       },
       "configurations": {
         "production": {
