--- a/libs/nativelib-nonbuildable/project.json
+++ b/libs/nativelib-nonbuildable/project.json
@@ -4,22 +4,6 @@
   "sourceRoot": "libs/nativelib-nonbuildable/src",
   "prefix": "nativestory",
   "targets": {
-    "build": {
-      "executor": "@nrwl/angular:ng-packagr-lite",
-      "outputs": ["dist/libs/nativelib-nonbuildable"],
-      "options": {
-        "project": "libs/nativelib-nonbuildable/ng-package.json"
-      },
-      "configurations": {
-        "production": {
-          "tsConfig": "libs/nativelib-nonbuildable/tsconfig.lib.prod.json"
-        },
-        "development": {
-          "tsConfig": "libs/nativelib-nonbuildable/tsconfig.lib.json"
-        }
-      },
-      "defaultConfiguration": "production"
-    },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/libs/nativelib-nonbuildable"],
@@ -38,14 +22,12 @@
       }
     },
     "storybook": {
-      "executor": "@nrwl/storybook:storybook",
+      "executor": "@storybook/angular:start-storybook",
       "options": {
-        "uiFramework": "@storybook/angular",
         "port": 4400,
-        "config": {
-          "configFolder": "libs/nativelib-nonbuildable/.storybook"
-        },
-        "projectBuildConfig": "nativelib-nonbuildable"
+        "configDir": "libs/nativelib-nonbuildable/.storybook",
+        "browserTarget": "nativelib-nonbuildable:build-storybook",
+        "compodoc": false
       },
       "configurations": {
         "ci": {
@@ -54,15 +36,13 @@
       }
     },
     "build-storybook": {
-      "executor": "@nrwl/storybook:build",
+      "executor": "@storybook/angular:build-storybook",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "uiFramework": "@storybook/angular",
-        "outputPath": "dist/storybook/nativelib-nonbuildable",
-        "config": {
-          "configFolder": "libs/nativelib-nonbuildable/.storybook"
-        },
-        "projectBuildConfig": "nativelib-nonbuildable"
+        "outputDir": "dist/storybook/nativelib-nonbuildable",
+        "configDir": "libs/nativelib-nonbuildable/.storybook",
+        "browserTarget": "nativelib-nonbuildable:build-storybook",
+        "compodoc": false
       },
       "configurations": {
         "ci": {
