--- a/package.json
+++ b/package.json
@@ -10,58 +10,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.0",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
-    "@angular/forms": "~13.2.0",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/router": "~13.2.0",
+    "@angular/animations": "13.3.6",
+    "@angular/common": "13.3.6",
+    "@angular/compiler": "13.3.6",
+    "@angular/core": "13.3.6",
+    "@angular/forms": "13.3.6",
+    "@angular/platform-browser": "13.3.6",
+    "@angular/platform-browser-dynamic": "13.3.6",
+    "@angular/router": "13.3.6",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@storybook/core-server": "6.4.22"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.0",
+    "@angular-devkit/build-angular": "13.3.5",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.2.0",
-    "@angular/compiler-cli": "~13.2.0",
-    "@angular/language-service": "~13.2.0",
-    "@nrwl/angular": "^13.9.5",
+    "@angular/cli": "13.3.5",
+    "@angular/compiler-cli": "13.3.6",
+    "@angular/language-service": "13.3.6",
+    "@nrwl/angular": "14.1.4",
     "@nrwl/cli": "13.9.5",
-    "@nrwl/cypress": "13.9.5",
-    "@nrwl/eslint-plugin-nx": "13.9.5",
-    "@nrwl/jest": "13.9.5",
-    "@nrwl/linter": "13.9.5",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/storybook": "^13.9.5",
-    "@nrwl/workspace": "13.9.5",
-    "@storybook/addon-essentials": "~6.4.12",
-    "@storybook/angular": "~6.4.12",
-    "@storybook/builder-webpack5": "~6.4.12",
-    "@storybook/manager-webpack5": "~6.4.12",
-    "@types/jest": "27.0.2",
+    "@nrwl/cypress": "14.1.4",
+    "@nrwl/eslint-plugin-nx": "14.1.4",
+    "@nrwl/jest": "14.1.4",
+    "@nrwl/linter": "14.1.4",
+    "@nrwl/nx-cloud": "14.0.3",
+    "@nrwl/storybook": "14.1.4",
+    "@nrwl/workspace": "14.1.4",
+    "@storybook/addon-essentials": "~6.4.22",
+    "@storybook/angular": "~6.4.22",
+    "@storybook/builder-webpack5": "~6.4.22",
+    "@storybook/manager-webpack5": "~6.4.22",
+    "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "~5.10.0",
-    "@typescript-eslint/parser": "~5.10.0",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "@typescript-eslint/parser": "5.18.0",
     "cypress": "^9.1.0",
-    "eslint": "~8.7.0",
+    "eslint": "8.12.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "27.2.3",
+    "jest": "27.5.1",
     "jest-preset-angular": "11.1.1",
-    "ng-packagr": "^13.0.0",
-    "nx": "^13.9.5",
+    "ng-packagr": "13.3.1",
+    "nx": "14.1.4",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
     "postcss-url": "^10.1.1",
     "prettier": "^2.5.1",
-    "ts-jest": "27.0.5",
-    "typescript": "~4.5.2",
+    "ts-jest": "27.1.4",
+    "typescript": "4.6.4",
     "webpack": "^5.64.0"
   }
 }
