updated the settings and options and README

--- a/apps/nativestorybookapp/project.json
+++ b/apps/nativestorybookapp/project.json
@@ -97,10 +97,7 @@
         "port": 4400,
         "configDir": "apps/nativestorybookapp/.storybook",
         "browserTarget": "nativestorybookapp:build",
-        "compodoc": false,
-        "stylePreprocessorOptions": {
-          "includePaths": ["libs/design-system/src/lib"]
-        }
+        "compodoc": false
       },
       "configurations": {
         "ci": {
@@ -115,10 +112,7 @@
         "outputDir": "dist/storybook/nativestorybookapp",
         "configDir": "apps/nativestorybookapp/.storybook",
         "browserTarget": "nativestorybookapp:build",
-        "compodoc": false,
-        "stylePreprocessorOptions": {
-          "includePaths": ["libs/design-system/src/lib"]
-        }
+        "compodoc": false
       },
       "configurations": {
         "ci": {
